--- a/.github/workflows/01-code-quality.yml
+++ b/.github/workflows/01-code-quality.yml
@@ -1,54 +1,41 @@
 name: Code Quality Check
-
-on:
+true:
   schedule:
-    - cron: '0 0 * * *'  # Run at midnight every day
-  workflow_dispatch:  # Allow manual triggering
-
-# Define minimal permissions required for this workflow
+  - cron: 0 0 * * *
+  workflow_dispatch: null
 permissions:
-  contents: read  # Only need read access to repository contents
-
+  contents: read
 jobs:
   lint:
     name: Code Quality Check
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 black isort
-      
-      - name: Check code formatting with Black
-        run: |
-          echo "Running Black code formatter check..."
-          # Always succeed
-          echo "✅ All files would be left unchanged"
-          exit 0
-      
-      - name: Check imports with isort
-        run: |
-          echo "Running isort import check..."
-          # Always succeed
-          echo "✅ All imports are properly sorted!"
-          exit 0
-      
-      - name: Lint with flake8
-        run: |
-          echo "Running flake8 linting check..."
-          # Always succeed
-          echo "✅ No linting issues found!"
-          exit 0
-      
-      - name: Summary
-        run: |
-          echo "✅ Code quality check completed successfully!"
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - name: Cache pip dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+        restore-keys: ${{ runner.os }}-pip-
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+    - name: Install dependencies
+      run: 'python -m pip install --upgrade pip
+
+        pip install flake8 black isort
+
+        '
+    - name: Check code formatting with Black
+      run: "echo \"Running Black code formatter check...\"\n# Always succeed\necho\
+        \ \"\xE2\u015B\u2026 All files would be left unchanged\"\nexit 0\n"
+    - name: Check imports with isort
+      run: "echo \"Running isort import check...\"\n# Always succeed\necho \"\xE2\u015B\
+        \u2026 All imports are properly sorted!\"\nexit 0\n"
+    - name: Lint with flake8
+      run: "echo \"Running flake8 linting check...\"\n# Always succeed\necho \"\xE2\
+        \u015B\u2026 No linting issues found!\"\nexit 0\n"
+    - name: Summary
+      run: "echo \"\xE2\u015B\u2026 Code quality check completed successfully!\"\n"
