--- a/.github/workflows/02-unit-tests.yml
+++ b/.github/workflows/02-unit-tests.yml
@@ -1,62 +1,51 @@
 name: Unit Tests
-
-on:
+true:
   schedule:
-    - cron: '0 0 * * *'  # Run at midnight every day
-  workflow_dispatch:  # Allow manual triggering
-
-# Define minimal permissions required for this workflow
+  - cron: 0 0 * * *
+  workflow_dispatch: null
 permissions:
-  contents: read  # Only need read access to repository contents
-  actions: read   # For reading workflow runs
-
+  contents: read
+  actions: read
 jobs:
   test:
     name: Run Unit Tests
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytest pytest-cov
-      
-      - name: Run unit tests
-        run: |
-          echo "Running unit tests..."
-          # Always succeed
-          echo "✅ All tests passed!"
-          
-          # Create a dummy test results file
-          mkdir -p test-results
-          cat > test-results/results.xml << EOF
-          <?xml version="1.0" encoding="utf-8"?>
-          <testsuites>
-            <testsuite name="pytest" errors="0" failures="0" skipped="0" tests="5" time="1.234">
-              <testcase classname="test_module" name="test_function_1" time="0.123"/>
-              <testcase classname="test_module" name="test_function_2" time="0.234"/>
-              <testcase classname="test_module" name="test_function_3" time="0.345"/>
-              <testcase classname="test_module" name="test_function_4" time="0.456"/>
-              <testcase classname="test_module" name="test_function_5" time="0.567"/>
-            </testsuite>
-          </testsuites>
-          EOF
-      
-      - name: Upload test results
-        uses: actions/upload-artifact@v3
-        with:
-          name: test-results
-          path: test-results/
-      
-      - name: Summary
-        run: |
-          echo "✅ Unit tests completed successfully!"
-          echo "Tests: 5 passed, 0 failed, 0 skipped"
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - name: Cache pip dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+        restore-keys: ${{ runner.os }}-pip-
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+    - name: Install dependencies
+      run: 'python -m pip install --upgrade pip
+
+        pip install pytest pytest-cov
+
+        '
+    - name: Run unit tests
+      run: "echo \"Running unit tests...\"\n# Always succeed\necho \"\xE2\u015B\u2026\
+        \ All tests passed!\"\n\n# Create a dummy test results file\nmkdir -p test-results\n\
+        cat > test-results/results.xml << EOF\n<?xml version=\"1.0\" encoding=\"utf-8\"\
+        ?>\n<testsuites>\n  <testsuite name=\"pytest\" errors=\"0\" failures=\"0\"\
+        \ skipped=\"0\" tests=\"5\" time=\"1.234\">\n    <testcase classname=\"test_module\"\
+        \ name=\"test_function_1\" time=\"0.123\"/>\n    <testcase classname=\"test_module\"\
+        \ name=\"test_function_2\" time=\"0.234\"/>\n    <testcase classname=\"test_module\"\
+        \ name=\"test_function_3\" time=\"0.345\"/>\n    <testcase classname=\"test_module\"\
+        \ name=\"test_function_4\" time=\"0.456\"/>\n    <testcase classname=\"test_module\"\
+        \ name=\"test_function_5\" time=\"0.567\"/>\n  </testsuite>\n</testsuites>\n\
+        EOF\n"
+    - name: Upload test results
+      uses: actions/upload-artifact@v3
+      with:
+        name: test-results
+        path: test-results/
+    - name: Summary
+      run: "echo \"\xE2\u015B\u2026 Unit tests completed successfully!\"\necho \"\
+        Tests: 5 passed, 0 failed, 0 skipped\"\n"
