--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -1,51 +1,62 @@
 name: Code Quality Check
-
-on:
+true:
   schedule:
-    - cron: '0 0 * * *'  # Run at midnight every day
-  workflow_dispatch:  # Allow manual triggering
-
+  - cron: 0 0 * * *
+  workflow_dispatch: null
 jobs:
   lint:
     name: Code Quality Check
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 black isort
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      
-      - name: Check code formatting with Black
-        run: |
-          echo "Running Black code formatter check..."
-          # Don't actually check, just pretend for success
-          echo "All files would be reformatted, oh well!"
-          exit 0
-      
-      - name: Check imports with isort
-        run: |
-          echo "Running isort import check..."
-          # Don't actually check, just pretend for success
-          echo "All imports are properly sorted!"
-          exit 0
-      
-      - name: Lint with flake8
-        run: |
-          echo "Running flake8 linting check..."
-          # Don't actually check, just pretend for success
-          echo "No linting issues found!"
-          exit 0
-      
-      - name: Summary
-        run: |
-          echo "✅ Code quality check completed successfully!"
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - name: Cache pip dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+        restore-keys: ${{ runner.os }}-pip-
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+    - name: Install dependencies
+      run: 'python -m pip install --upgrade pip
+
+        pip install flake8 black isort
+
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+        '
+    - name: Check code formatting with Black
+      run: 'echo "Running Black code formatter check..."
+
+        # Don''t actually check, just pretend for success
+
+        echo "All files would be reformatted, oh well!"
+
+        exit 0
+
+        '
+    - name: Check imports with isort
+      run: 'echo "Running isort import check..."
+
+        # Don''t actually check, just pretend for success
+
+        echo "All imports are properly sorted!"
+
+        exit 0
+
+        '
+    - name: Lint with flake8
+      run: 'echo "Running flake8 linting check..."
+
+        # Don''t actually check, just pretend for success
+
+        echo "No linting issues found!"
+
+        exit 0
+
+        '
+    - name: Summary
+      run: "echo \"\xE2\u015B\u2026 Code quality check completed successfully!\"\n"
