--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -1,17 +1,13 @@
 name: Integration Tests
-
-on:
+true:
   schedule:
-    - cron: '0 0 * * *'  # Run at midnight every day
-  workflow_dispatch:  # Allow manual triggering
-
+  - cron: 0 0 * * *
+  workflow_dispatch: null
 jobs:
   integration-test:
     name: Run Integration Tests
     runs-on: ubuntu-latest
-    
     services:
-      # Mock database service
       postgres:
         image: postgres:13
         env:
@@ -19,54 +15,45 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_DB: test_db
         ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
+        - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s
           --health-retries 5
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytest pytest-cov
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      
-      - name: Run integration tests
-        run: |
-          echo "Running integration tests..."
-          # Don't actually run tests, just pretend for success
-          echo "All integration tests passed!"
-          
-          # Create a dummy test results file
-          mkdir -p test-results
-          cat > test-results/integration-results.xml << EOF
-          <?xml version="1.0" encoding="utf-8"?>
-          <testsuites>
-            <testsuite name="pytest" errors="0" failures="0" skipped="0" tests="3" time="2.345">
-              <testcase classname="test_integration" name="test_api_endpoint_1" time="0.789"/>
-              <testcase classname="test_integration" name="test_api_endpoint_2" time="0.678"/>
-              <testcase classname="test_integration" name="test_database_connection" time="0.876"/>
-            </testsuite>
-          </testsuites>
-          EOF
-      
-      - name: Upload test results
-        uses: actions/upload-artifact@v3
-        with:
-          name: integration-test-results
-          path: test-results/
-      
-      - name: Summary
-        run: |
-          echo "✅ Integration tests completed successfully!"
-          echo "Tests: 3 passed, 0 failed, 0 skipped"
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - name: Cache pip dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+        restore-keys: ${{ runner.os }}-pip-
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+    - name: Install dependencies
+      run: 'python -m pip install --upgrade pip
+
+        pip install pytest pytest-cov
+
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+        '
+    - name: Run integration tests
+      run: "echo \"Running integration tests...\"\n# Don't actually run tests, just\
+        \ pretend for success\necho \"All integration tests passed!\"\n\n# Create\
+        \ a dummy test results file\nmkdir -p test-results\ncat > test-results/integration-results.xml\
+        \ << EOF\n<?xml version=\"1.0\" encoding=\"utf-8\"?>\n<testsuites>\n  <testsuite\
+        \ name=\"pytest\" errors=\"0\" failures=\"0\" skipped=\"0\" tests=\"3\" time=\"\
+        2.345\">\n    <testcase classname=\"test_integration\" name=\"test_api_endpoint_1\"\
+        \ time=\"0.789\"/>\n    <testcase classname=\"test_integration\" name=\"test_api_endpoint_2\"\
+        \ time=\"0.678\"/>\n    <testcase classname=\"test_integration\" name=\"test_database_connection\"\
+        \ time=\"0.876\"/>\n  </testsuite>\n</testsuites>\nEOF\n"
+    - name: Upload test results
+      uses: actions/upload-artifact@v3
+      with:
+        name: integration-test-results
+        path: test-results/
+    - name: Summary
+      run: "echo \"\xE2\u015B\u2026 Integration tests completed successfully!\"\n\
+        echo \"Tests: 3 passed, 0 failed, 0 skipped\"\n"
