--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,81 +1,96 @@
 name: Linting
-
-on:
+true:
   schedule:
-    - cron: '0 0 * * *'  # Run daily at midnight
-  workflow_dispatch:  # Allow manual triggering
-
+  - cron: 0 0 * * *
+  workflow_dispatch: null
 jobs:
   python-linting:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Cache pip dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+        restore-keys: ${{ runner.os }}-pip-
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
+    - name: Install dependencies
+      run: 'python -m pip install --upgrade pip
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
+        pip install flake8 black isort mypy
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 black isort mypy
+        '
+    - name: Run flake8
+      run: 'flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics ||
+        true
 
-      - name: Run flake8
-        run: |
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics || true
+        '
+    - name: Run black
+      run: 'black --check . || true
 
-      - name: Run black
-        run: |
-          black --check . || true
+        '
+    - name: Run isort
+      run: 'isort --check-only --profile black . || true
 
-      - name: Run isort
-        run: |
-          isort --check-only --profile black . || true
+        '
+    - name: Run mypy
+      run: 'mypy --ignore-missing-imports . || true
 
-      - name: Run mypy
-        run: |
-          mypy --ignore-missing-imports . || true
-
+        '
   javascript-linting:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Cache npm dependencies
+      uses: actions/cache@v3
+      with:
+        path: '**/node_modules'
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: ${{ runner.os }}-node-
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+    - name: Install dependencies
+      run: 'cd frontend
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
+        npm ci
 
-      - name: Install dependencies
-        run: |
-          cd frontend
-          npm ci
+        '
+    - name: Run ESLint
+      run: 'cd frontend
 
-      - name: Run ESLint
-        run: |
-          cd frontend
-          npm run lint || true
+        npm run lint || true
 
-      - name: Run Prettier
-        run: |
-          cd frontend
-          npx prettier --check "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}" || true
+        '
+    - name: Run Prettier
+      run: 'cd frontend
 
+        npx prettier --check "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}" || true
+
+        '
   notification:
-    needs: [python-linting, javascript-linting]
+    needs:
+    - python-linting
+    - javascript-linting
     runs-on: ubuntu-latest
     if: always()
     steps:
-      - name: Send notification
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_CHANNEL: ci-alerts
-          SLACK_COLOR: ${{ job.status }}
-          SLACK_ICON: https://github.com/rtCamp.png?size=48
-          SLACK_MESSAGE: 'Linting completed'
-          SLACK_TITLE: Linting Results
-          SLACK_USERNAME: GitHub Actions
+    - name: Send notification
+      uses: rtCamp/action-slack-notify@v2
+      env:
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+        SLACK_CHANNEL: ci-alerts
+        SLACK_COLOR: ${{ job.status }}
+        SLACK_ICON: https://github.com/rtCamp.png?size=48
+        SLACK_MESSAGE: Linting completed
+        SLACK_TITLE: Linting Results
+        SLACK_USERNAME: GitHub Actions
+      continue-on-error: true
+      if: ${ secrets.SLACK_WEBHOOK != '' }
